# 2026_1_PI1_Grupo02_Juliana

./: .gitignore  404.html  CONTRIBUTING.md  _config.yml  index.html  mkdocs.yml  requirements.txt  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  task.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: mkdocs.yml
docs/: index.md  roadmap.md
docs/guides/: contributing.md  githubdesktoptutorial.md  latextutorial.md  mkdocstutorial.md  quick-reference.md  start.md
docs/relatorio/: bibliografia.bib
docs/relatorio/editaveis/: 00_informacoes.tex  04_termodeaberturadoprojeto.tex  05_equipe.tex  06_projetoconceitual.tex  07_orcamento.tex  08_cronograma.tex  09_resultados.tex
docs/relatorio/fixos/: pacotes.tex
docs/software/: casosteste.md  eap-software.md
guides/contributing/: index.html
guides/githubdesktoptutorial/: index.html
guides/latextutorial/: index.html
guides/mkdocstutorial/: index.html
guides/quick-reference/: index.html
guides/start/: index.html
hw/: Diagrama_de_blocos.md  esquematico.md
mec/Chassi/: README.md
mec/Chassi/arquivos_stl_imprimir/: abracadeira-bateria.stl  abracadeira-motor.stl  placa-inferior.stl  placa-superior.stl
mec/Chassi/assembly/: 0C-138.CATPart  1.15.CATPart  1x6 TH Pitch 2.54mm v1.46.CATPart  1x6 TH Pitch 2.54mm v1.47.CATPart  2.CATPart  2001.CATPart  3V3.CATPart  3V3_EN.CATPart  6.CATPart  8.CATPart  8_Pin_DIP.3.CATPart  8_Pin_DIP.4.CATPart  94V-0 H.CATPart  A.CATPart  ADC_VREF.CATPart  AGND.CATPart  A_o.CATPart  AlGa.CATPart  Anode.CATPart  BOOTSEL.CATPart  Barry.CATPart  Body014.CATPart  Body070.CATPart  Body071.CATPart  Body072.CATPart  Body073.CATPart  Body074.CATPart  Body075.CATPart  Body076.CATPart  Body077.CATPart  Body078.CATPart  Body080.CATPart  Body081.CATPart  Body097.CATPart  Body105.CATPart  Body114.CATPart  Body115.CATPart  Body116.CATPart  (+425 more)
mec/Labirinto/: Labirinto1-3D.CATPart  README.md  labirinto 1.CATDrawing  labirinto1.CATDrawing  labirinto2-3D.CATPart  labirinto2.CATDrawing
relatorio/: relatorio.tex
relatorio/editaveis/: 01_abreviaturas.tex  02_resumo.tex  03_introducao.tex  08_cronograma.tex
relatorio/fixos/: customizacoes.sty
roadmap/: index.html
search/: search_index.json
software/: .dockerignore  .env.example  .gitignore  .gitmessage  GUIA_EXECUCAO.md  GUIA_MOTORES.md  GUIA_TELEMETRIA.md  Makefile  README.md  monitor_telemetry.sh  test_motors.sh
software/backend/: conftest.py  manage.py  pyproject.toml
software/backend/config/: asgi.py  celery_app.py  routing.py  urls.py  wsgi.py
software/backend/config/settings/: base.py  local.py  production.py  test.py
software/backend/src/core/: admin.py  apps.py  errors.py  logging.py  middleware.py  permissions.py
software/backend/src/core/api/: pagination.py  renderers.py  responses.py  urls.py  views.py
software/backend/src/core/management/commands/: seed.py
software/backend/src/core/models/: base.py
software/backend/src/core/observability/: __init__.py  health.py  sentry.py
software/backend/src/core/tests/: factories.py  test_basemodel.py  test_envelope.py  test_errors.py  test_health_endpoint.py  test_jwt.py  test_middleware.py  test_observability_sentry.py  test_permissions.py  test_responses.py
software/backend/src/healthcheck/: admin.py  apps.py  models.py  selectors.py
software/backend/src/healthcheck/api/: serializers.py  urls.py  views.py
software/backend/src/healthcheck/migrations/: 0001_initial.py
software/backend/src/healthcheck/tests/: factories.py  test_api.py  test_selectors.py  test_use_cases.py
software/backend/src/healthcheck/use_cases/: run_check.py
software/backend/src/integrations/fetcher/: base.py  factory.py  httpx_fetcher.py
software/backend/src/integrations/llm/: anthropic_client.py
software/backend/src/integrations/mqtt/: client.py
software/backend/src/integrations/notifications/: README.md
software/backend/src/integrations/storage/: s3_client.py
software/backend/src/integrations/tests/: test_fetcher.py  test_mqtt.py
software/backend/src/runs/: admin.py  apps.py  consumers.py  models.py  realtime.py  schemas.py  selectors.py  tasks.py
software/backend/src/runs/api/: serializers.py  sse.py  urls.py  views.py
software/backend/src/runs/management/commands/: mqtt_simulate.py  mqtt_subscribe.py
software/backend/src/runs/migrations/: 0001_initial.py  0002_posicao_bateria_posicao_orientacao_and_more.py
software/backend/src/runs/services/: maze.py  simulator.py  snapshot.py
software/backend/src/runs/tests/: factories.py  test_api.py  test_api_extended.py  test_realtime.py  test_schemas.py  test_selectors.py  test_services.py  test_tasks.py  test_use_cases.py
software/backend/src/runs/use_cases/: persistir_telemetria.py  registrar_evento.py
software/casosteste/: index.html
software/docker/: Dockerfile.backend  Dockerfile.frontend  compose.yml
software/eap-software/: index.html
software/firmware/: .gitignore  CMakeLists.txt  platformio.ini
software/firmware/funcao-basica/: CMakeLists.txt
software/firmware/include/: MazeMapper.h  Motor.h  PID.h  WatchdogMotor.h
software/firmware/motores/: CMakeLists.txt  GUIA_MOTORES.md  Motor.cpp  PID.h  WatchdogMotor.h  diagram.json  lwipopts.h  main.cpp  wokwi.toml
software/firmware/mpu6050/: hardware.md  mpu6050.cpp  testes-mpu6050.md
software/firmware/src/: MazeMapper.cpp  Motor.cpp  PID.cpp  WatchdogMotor.cpp  main.cpp
software/firmware/telemetria/: CMakeLists.txt  MazeMapper.cpp  main.cpp
software/frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
src/firmware/funcoes_basicas_hcsr04/: CMakeLists.txt  hcsr04.cpp  hcsr04.h  main.cpp  perifericos.md
src/firmware/funcoes_basicas_mpu-6050/: CMakeLists.txt  hardware.md  main.cpp  mpu6050.cpp  mpu6050.h  mpu6050_gyro.cpp  mpu6050_gyro.h  mpu6050_i2c.uf2  mpu6050_micromouse.uf2  perifericos.md  testes-mpu6050.md
src/firmware/funcoes_basicas_vl53l0x/vl53l0x_teste/: CMakeLists.txt  main.c  vl53l0x.c  vl53l0x.h
(+44 files in other folders)
