[project]
name = "micromouse-backend"
version = "0.1.0"
description = "Micromouse backend — Django + DRF + Celery"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.4,<6.1",
    "djangorestframework>=3.17.1,<3.18",
    "djangorestframework-simplejwt>=5.5,<5.6",
    "django-cors-headers>=4.9,<4.10",
    "django-filter>=25.2,<26",
    "django-celery-beat>=2.9,<3",
    "celery>=5.6.3,<5.7",
    "psycopg[binary]>=3.3,<3.4",
    "redis>=5.2,<6",
    "pydantic>=2.12.5,<3",
    "httpx>=0.28,<0.29",
    "paho-mqtt>=2.1,<3",
    "python-decouple>=3.8,<3.9",
    "loguru>=0.7.3,<0.8",
    "sentry-sdk[celery,django]>=2.17,<3",
]

[dependency-groups]
dev = [
    "pytest>=9,<10",
    "pytest-django>=4.12,<5",
    "pytest-xdist>=3.6,<4",
    "factory-boy>=3.3,<3.4",
    "faker>=30,<40",
    "django-extensions>=4.1,<4.2",
    "django-debug-toolbar>=5.0,<6",
    "ipython>=8.30,<9",
    "ruff>=0.15.11,<0.16",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 120
target-version = "py314"
src = ["src", "config"]
extend-exclude = [
    "**/migrations/**",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["config", "core", "integrations", "healthcheck"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--reuse-db -ra"
pythonpath = ["src", "."]
